--- a/ideax/static/css/idea.css
+++ b/ideax/static/css/idea.css
@@ -139,7 +139,7 @@ height: 80px !important;
 }
 
 .fixed ~ .group{
-  margin-top: 130px;
+  margin-top: 85px;
 }
 
 nav.phase-filter {
@@ -198,6 +198,12 @@ ul.phase-list li.active a {
   display: block;
   margin: 30px auto 0 auto;
   font-size: 1.8em;
+}
+
+.content iframe{
+  position: fixed;
+  right: 25px;
+  bottom: 0;
 }
 
 
@@ -613,7 +619,7 @@ input.menu-input{
   margin-right: 5px;
 }
 
-.discussion{
+/* .discussion{
   border-left: 5px solid #f68b2c !important;
 
 }
@@ -637,12 +643,12 @@ input.menu-input{
 
 .archived{
   border-left: 5px solid #726C69 !important;
-}
+} */
 
 .like-menu{
   display: flex;
   align-items: center;
-  font-size: 1.3em;
+  font-size: 1em;
 }
 
 
@@ -654,6 +660,7 @@ input.menu-input{
   font-size: 1.15em;
 
 }
+
 
 .liked a,
 .disliked a{
@@ -1499,7 +1506,7 @@ padding: 8% 15% 0 15%;
 
 
 .group{
-  margin-top: 50px;
+  margin-top: 5px;
   display: flex;
   justify-content: space-around;
   padding: 0 50px;
@@ -1521,7 +1528,7 @@ padding: 8% 15% 0 15%;
 
 .img-container{
   width: 100%;
-  height: 120px;
+  height: 170px;
   position: relative;
   overflow: hidden;
 }
@@ -1593,9 +1600,22 @@ padding: 8% 15% 0 15%;
   justify-content: space-between;
 }
 
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+}
+
 .idea-card-body{
   max-height: 219px;
   overflow: hidden;
+  height: 100%;
+  display: block;
+  text-decoration: none !important;
+  color: inherit;
+}
+
+.idea-card-body:hover{
+  color: black;
 }
 
 .idea-card-footer{
