--- a/ideax/templates/ideax/includes/footer.html
+++ b/ideax/templates/ideax/includes/footer.html
@@ -1,4 +1,9 @@
 {% load staticfiles i18n %}
+<div class="bot-control" data-toggle="collapse" data-target="#bot-iframe">
+  <p>{% trans 'Help' %}</p>
+  <i class="fas fa-angle-down"></i>
+</div>
+<iframe id="bot-iframe" class="collapse" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/5d7dfc5a-1a3d-4d60-9ef6-bd2cfc285318"></iframe>
 
 <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} >
     <div class="logo">
@@ -18,8 +23,8 @@
             TERMO DE USO
           </div>
           <div class="modal-footer">
-            <a id="term-decline" class="term-btn" href="{% url 'logout' %}">Cancelar</a>
-            <a id="term-accept" class="term-btn" href="{% url 'accept_term' %}">Aceitar</a>
+            <a id="term-decline" class="term-btn" href="{% url 'logout' %}">{% trans 'Decline' %}</a>
+            <a id="term-accept" class="term-btn" href="{% url 'accept_term' %}">{% trans 'Accept' %}</a>
           </div>
         </div>
       </div>
