--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -23,7 +23,7 @@
           {{ message }}
       </div>
     {% endfor %}
-    <div class="group">
+    <div class="group" id="idea-list-group">
       {%if not ideas %}
           {% include 'ideax/includes/empty.html' %}
       {%else%}
