--- a/ideax/templates/ideax/includes/footer.html
+++ b/ideax/templates/ideax/includes/footer.html
@@ -7,6 +7,6 @@
 
 <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} >
     <div class="logo">
-      <p class="alpha-version">Idea X - Software in alpha stage 2018-03-29</p>
+      <p class="alpha-version">Idea<sup>X</sup> - Software in alpha stage</p>
     </div>
 </footer>
