--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -46,8 +46,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <div class="modal-title">
-              <span><i class="fas fa-exclamation"></i></span>
-                <h4>{% trans 'Terms of use' %}</h4>
+                <h4 class="title-modal-term">{% trans 'Terms of use' %}</h4>
               </div>
             </div>
             <div class="modal-body" id="modal-term-text">
