fix issue 50, add piwik support

--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{% static 'css/idea.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+        {% include 'ideax/includes/piwik.js' %}
     </head>
     <body>
       <div class="main-header">
