--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -14,7 +14,7 @@
       <div class="main-header">
         <h1 class="title">
           <a href="/">
-            <img src="{% static 'images/logo_vertical.png' %}" alt="">
+            <img src="{% static 'images/logo_horizontal.png' %}" alt="">
           </a>
         </h1>
         {% if user.is_authenticated %}
