--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -51,11 +51,11 @@
               </div>
             </div>
             <div class="modal-body" id="modal-term-text">
-              TERMO DE USO
+
             </div>
             <div class="modal-footer">
-              <a id="term-decline" class="term-btn" href="{% url 'logout' %}">Cancelar</a>
-              <a id="term-accept" class="term-btn" href="{% url 'accept_term' %}">Aceitar</a>
+              <a id="term-decline" class="term-btn" href="{% url 'logout' %}">{% trans 'Cancel' %}</a>
+              <a id="term-accept" class="term-btn" href="{% url 'accept_term' %}">{% trans 'Accept' %}</a>
             </div>
           </div>
         </div>
