Update files for use of bootstrap classes and themes.

--- a/ideax/templates/ideax/includes/empty.html
+++ b/ideax/templates/ideax/includes/empty.html
@@ -1,1 +1,5 @@
-<p class="empty">Não há idéias nessa fase!</p>
+{% load i18n %}
+
+<div class="col-sm-12">
+    <p class="lead text-center">{% trans 'There are no ideas at this stage!' %}</p>
+</div>
