--- a/ideax/static/css/idea.css
+++ b/ideax/static/css/idea.css
@@ -1609,3 +1609,46 @@ div.idea-form-body .form-group select {
 .title-modal-term {
   font-weight: bold;
 }
+
+.invite{
+  background-image: url("../images/grey-logo.png");
+  width: 730px;
+  height: 560px;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 53px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0 30px;
+}
+
+.invite-body{
+  text-align: center;
+}
+
+.invite-body div{
+  display: inline;
+}
+
+.invite-footer img{
+  height: auto;
+  width: 70px
+}
+
+.invite-footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.invite-footer .dep-info{
+  font-size: 12px;
+}
+
+.invite-footer .dep-info p{
+  margin: 0;
+  font-weight: bold;
+  text-align: center;
+}
